codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_fresh_session_transitions.snap
---
source: tui/src/startup_draft_tests.rs
assertion_line: 285
expression: "snapshots.join(\"\\n---\\n\")"
---
resume lookup fallback:
before:

  >_ Codez (v<VERSION>)
     loading

  Pull up a prompt.
  Resuming session…

› draft while loading


after:

  >_ Codez (v<VERSION>)
     loading

  Pull up a prompt.


› draft while loading


---
fork lookup fallback:
before:

  >_ Codez (v<VERSION>)
     loading

  Pull up a prompt.
  Forking session…

› draft while loading


after:

  >_ Codez (v<VERSION>)
     loading

  Pull up a prompt.


› draft while loading


---
resume picker cancellation:
before:
hidden while picker owns input
after:

  >_ Codez (v<VERSION>)
     loading

  Pull up a prompt.


› Ask Codez to do anything

  ? for shortcuts
---
fork picker cancellation:
before:
hidden while picker owns input
after:

  >_ Codez (v<VERSION>)
     loading

  Pull up a prompt.


› Ask Codez to do anything

  ? for shortcuts
